--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人网站</title>
+    <title>轻倚石</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <nav class="main-nav">
         <div class="nav-container">
             <div class="logo">
-                <img src="C:\Users\MaDrink\Desktop\page\1f316.png" alt="Logo">
+                <img src="img/1f316.png" alt="Logo">
             </div>
             <div class="nav-links">
                 <a href="#tale">Tale</a>
@@ -29,7 +29,7 @@
             <div class="hero-container">
                 <div class="hero-image">
                     <!-- 这里替换成你的图片路径 -->
-                    <img src="C:\Users\MaDrink\Desktop\page\20250121190908.jpg" alt="Banner Image">
+                    <img src="img/20250121190908.jpg" alt="Banner Image">
                 </div>
                 <div class="hero-content">
                     <h1>Trash takes itself<br>out every single time</h1>
@@ -53,34 +53,34 @@
                         <div class="carousel-track-container">
                             <div class="carousel-track">
                                 <div class="carousel-slide">
-                                    <a href="#" class="credit-link">
-                                        <img src="C:\Users\MaDrink\Desktop\page\chuanxi_20250121194433.jpg" alt="川西">
+                                    <div class="credit-link">
+                                        <img src="img/chuanxi_20250121194433.jpg" alt="川西">
                                         <div class="credit-overlay">川 西</div>
-                                    </a>
+                                    </div>
                                 </div>
                                 <div class="carousel-slide">
-                                    <a href="#" class="credit-link">
-                                        <img src="C:\Users\MaDrink\Desktop\page\haerbing20250121194444.jpg" alt="哈尔滨">
+                                    <div class="credit-link">
+                                        <img src="img/haerbing20250121194444.jpg" alt="哈尔滨">
                                         <div class="credit-overlay">哈 尔 滨</div>
-                                    </a>
+                                    </div>
                                 </div>
                                 <div class="carousel-slide">
-                                    <a href="#" class="credit-link">
-                                        <img src="C:\Users\MaDrink\Desktop\page\shenzhen_20250121194503.jpg" alt="深圳">
+                                    <div class="credit-link">
+                                        <img src="img/shenzhen_20250121194503.jpg" alt="深圳">
                                         <div class="credit-overlay">深 圳</div>
-                                    </a>
+                                    </div>
                                 </div>
                                 <div class="carousel-slide">
-                                    <a href="#" class="credit-link">
-                                        <img src="C:\Users\MaDrink\Desktop\page\yanbian20250121194516.jpg" alt="延边">
+                                    <div class="credit-link">
+                                        <img src="img/yanbian20250121194516.jpg" alt="延边">
                                         <div class="credit-overlay">延 边</div>
-                                    </a>
+                                    </div>
                                 </div>
                                 <div class="carousel-slide">
-                                    <a href="#" class="credit-link">
-                                        <img src="C:\Users\MaDrink\Desktop\page\20250121190908.jpg" alt="最后一张">
+                                    <div class="credit-link">
+                                        <img src="img/20250121190908.jpg" alt="最后一张">
                                         <div class="credit-overlay">最后一张</div>
-                                    </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -103,43 +103,43 @@
                 <div class="albums-grid">
                     <!-- 第一行 -->
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-Taylor-Swift-1.png" alt="Album 1">
+                        <img src="img/logo-Taylor-Swift-1.png" alt="Album 1">
                     </div>
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-Fearless-1.png" alt="Album 2">
+                        <img src="img/logo-Fearless-1.png" alt="Album 2">
                     </div>
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-Speak-Now-1.png" alt="Album 3">
+                        <img src="img/logo-Speak-Now-1.png" alt="Album 3">
                     </div>
                     <!-- 第二行 -->
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-Red-1.png" alt="Album 4">
+                        <img src="img/logo-Red-1.png" alt="Album 4">
                     </div>
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-1989-1.png" alt="Album 5">
+                        <img src="img/logo-1989-1.png" alt="Album 5">
                     </div>
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-Reputation.png" alt="Album 6">
+                        <img src="img/logo-Reputation.png" alt="Album 6">
                     </div>
                     <!-- 第三行 -->
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-Lover.png" alt="Album 7">
+                        <img src="img/logo-Lover.png" alt="Album 7">
                     </div>
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-Folkore.png" alt="Album 8">
+                        <img src="img/logo-Folkore.png" alt="Album 8">
                     </div>
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-Evermore.png" alt="Album 9">
+                        <img src="img/logo-Evermore.png" alt="Album 9">
                     </div>
                     <!-- 第四行 -->
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-Midnights.png" alt="Album 10">
+                        <img src="img/logo-Midnights.png" alt="Album 10">
                     </div>
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\logo-TTPD.png" alt="Album 11">
+                        <img src="img/logo-TTPD.png" alt="Album 11">
                     </div>
                     <div class="album-card">
-                        <img src="C:\Users\MaDrink\Desktop\page\1989.png" alt="Album 12">
+                        <img src="img/1989.png" alt="Album 12">
                     </div>
                 </div>
             </div>
