修复了bug+装载一些功能+装载新页面
导航栏的移动端适配完成，但是汉堡按钮与横线的重叠问题依旧，弹出窗口还可以美化
tale展示窗的移动端适配完成，但是pc与移动端依旧存在滑动距离问题
背景音乐添加，但arrive页面背景音乐有bug无法播放
添加了arrive页面，后期考虑美化
命名还未规范
添加了一些照片

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
         <div class="nav-container">
             <div class="logo">
                 <img src="img/1f316.png" alt="Logo">
+                <audio id="bgMusic" loop>
+                    <source src="music/01. Fortnight.flac" type="audio/mp3">
+                    你的浏览器不支持音频元素
+                </audio>
             </div>
+            <button class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <div class="nav-links">
                 <a href="#tale">Tale</a>
                 <a href="#albums">Albums collected</a>
@@ -67,7 +76,7 @@
                                 <div class="carousel-slide">
                                     <div class="credit-link">
                                         <img src="img/shenzhen_20250121194503.jpg" alt="深圳">
-                                        <div class="credit-overlay">深 圳</div>
+                                        <div class="credit-overlay">香 港</div>
                                     </div>
                                 </div>
                                 <div class="carousel-slide">
@@ -79,7 +88,31 @@
                                 <div class="carousel-slide">
                                     <div class="credit-link">
                                         <img src="img/20250121190908.jpg" alt="最后一张">
-                                        <div class="credit-overlay">最后一张</div>
+                                        <div class="credit-overlay">忻 州</div>
+                                    </div>
+                                </div>
+                                <div class="carousel-slide">
+                                    <div class="credit-link">
+                                        <img src="img/shenzhen20250216112822.jpg" alt="深圳">
+                                        <div class="credit-overlay">深 圳</div>
+                                    </div>
+                                </div>
+                                <div class="carousel-slide">
+                                    <div class="credit-link">
+                                        <img src="img/guiyang20250216112929.jpg" alt="贵阳">
+                                        <div class="credit-overlay">贵 阳</div>
+                                    </div>
+                                </div>
+                                <div class="carousel-slide">
+                                    <div class="credit-link">
+                                        <img src="img/hainan20250216113021.jpg" alt="海南">
+                                        <div class="credit-overlay">海 南</div>
+                                    </div>
+                                </div>
+                                <div class="carousel-slide">
+                                    <div class="credit-link">
+                                        <img src="img/rizhao20250216113050.jpg" alt="日照">
+                                        <div class="credit-overlay">日 照</div>
                                     </div>
                                 </div>
                             </div>
@@ -148,7 +181,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Liz. All rights reserved.</p>
+            <p>&copy; 2024 Liz. All rights reserved.  晋ICP备2025054737号-1</p>
         </div>
     </footer>
 
